--- a/product-preview-card-component-main/style.css
+++ b/product-preview-card-component-main/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins');
+@import url('https://fonts.googleapis.com/css2?family=Fraunces:opsz@9..144&display=swap');
 
 *{
     padding: 0px;
@@ -16,8 +17,8 @@ body{
 }
 section{
     margin: 60px auto;
-    height: 400px;
-    width: 570px;
+    height: 500px;
+    width: 600px;
     border-radius: 10px;
     display: flex;
     align-items: center;
@@ -86,12 +87,14 @@ p{
 }
 #price{
    font-weight: 600;
-    font-family: monospace;
-    font-size: 25px;
+    font-family: 'Fraunces';
+    font-size: 35px;
     color: rgb(4 86 4);
     margin-right: 20px;
 }
+
 h1{
+    
     font-weight: 700;
     font-size: 34px;
 }
@@ -101,6 +104,10 @@ h1{
        width: 400px;
        display: flex;
        flex-direction: column;
+}
+.inner{
+    margin-top: 20px;
+    margin-bottom: 15px;
 }
 .imgContainer{
     background-image: url(./images/image-product-mobile.jpg);
@@ -119,10 +126,10 @@ h1{
     align-items: center;
     flex-direction: column;
     width: 100%;
-    height:360px;
+    height:460px;
     background-color: white;
     justify-content: space-evenly;
-    padding: 10px 20px;
+    padding: 20px 20px;
     border-radius: 0px 0px 8px 8px;
 
 }
