--- a/product-preview-card-component-main/style.css
+++ b/product-preview-card-component-main/style.css
@@ -87,7 +87,7 @@ p{
 }
 #price{
    font-weight: 600;
-    font-family: 'Fraunces',sans-serif;
+    font-family: 'Fraunces';
     font-size: 35px;
     color: rgb(4 86 4);
     margin-right: 20px;
