--- a/product-preview-card-component-main/style.css
+++ b/product-preview-card-component-main/style.css
@@ -104,6 +104,7 @@ h1{
        width: 400px;
        display: flex;
        flex-direction: column;
+       padding: 50px;
 }
 .inner{
     margin-top: 20px;
